--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
-title: [The title of your site]
-description: [A short description of your site's purpose]
+title: Houssem Dellai videos
+description: Learn about Azure, Kubernetes, Terraform and DevOps
 show_downloads: true # ["true" or "false" (unquoted) to indicate whether to provide a download URL]
 # google_analytics: [Your Google Analytics tracking ID]
