--- a/_config.yml
+++ b/_config.yml
@@ -13,5 +13,5 @@ plugins:
 - jekyll-remote-theme
 title: Houssem Dellai videos
 description: Learn about Azure, Kubernetes, Terraform and DevOps
-show_downloads: true # ["true" or "false" (unquoted) to indicate whether to provide a download URL]
+show_downloads: false # ["true" or "false" (unquoted) to indicate whether to provide a download URL]
 # google_analytics: [Your Google Analytics tracking ID]
